# five-colors

./: CMakeLists.txt  LICENSE.txt  Readme.md  generate-puzzle.cpp  puzzle.cpp  puzzle.h  solve-any.cpp  solve-five-colors.cpp  unit_tests.cpp
